--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,22 @@
     "ruff.enable": true,
     "ruff.fixAll": true,
     "ruff.lint.enable": true,
-    "python.analysis.autoImportCompletions": true,
     "rewrap.autoWrap.enabled": true,
     "editor.wordWrap": "off",
     "editor.wordWrapColumn": 88,
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.testing.cwd": "",
+    "python.testing.pytestArgs": [
+        ".",
+        "--cov=src",
+        "--cov-report=term-missing",
+        "--cov-report=html",
+        "--cov-report=xml"
+    ],
+    "python.analysis.autoFormatStrings": true,
+    "python.analysis.autoImportCompletions": true,
+    "python.analysis.completeFunctionParens": true,
+    "python.analysis.inlayHints.functionReturnTypes": true,
+    "python.analysis.typeCheckingMode": "strict",
 }
