--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,13 @@ dependencies = [
     "mcp>=1.6.0",
     "structlog>=25.3.0",
     "posthog>=4.0.1",
+    "sqlalchemy[asyncio]>=2.0.40",
+    "alembic>=1.15.2",
+    "aiosqlite>=0.20.0",
+    "pytable-formatter>=0.1.1",
+    "aiofiles>=24.1.0",
+    "tdqm>=0.0.1",
+    "uritools>=5.0.0",
 ]
 
 [dependency-groups]
@@ -68,12 +75,14 @@ source = "vcs"
 version-file = "src/kodit/_version.py"
 
 [tool.pytest.ini_options]
+pythonpath = ["."]
 norecursedirs = ".git"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 filterwarnings = [
     "ignore:.*websockets.*:DeprecationWarning",
 ]
+addopts = ["--cov=src", "--cov-report=term-missing", "--cov-report=html", "--cov-report=xml"]
 
 [tool.coverage.run]
 source = ["src"]
@@ -92,6 +101,7 @@ ignore = [
   "PLR2004", # Just annoying, not really useful
   "TRY003", # Long exception messages in custom exception classes
   "S101", # Allow assert statements in test files
+  "PGH004", # If I've disabled all, I mean disable all
 ]
 select = ["ALL"]
 exclude = []
@@ -108,3 +118,19 @@ publish-url = "https://test.pypi.org/legacy/"
 
 [tool.uv]
 package = true
+
+[tool.mypy]
+plugins = ["sqlalchemy.ext.mypy.plugin"]
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_optional = true
+
