fix: set correct alembic path when code running in a build (#30)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,13 +41,13 @@ jobs:
         uses: MishaKav/pytest-coverage-comment@v1.1.54
         with:
           pytest-xml-coverage-path: ./coverage.xml
-  build-test:
+
+  build-package:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Use the official Python action to set up Python because it is faster
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
@@ -57,15 +57,45 @@ jobs:
         uses: astral-sh/setup-uv@v5
 
       - run: uv build --sdist --out-dir test-build
-      - run: uv tool run twine check test-build/*.tar.gz
-      - name: Find the path of the sdist
-        id: sdist-path
-        run: echo "::set-output name=path::$(ls test-build/*.tar.gz)"
+
+      - name: Upload built package
+        uses: actions/upload-artifact@v4
+        with:
+          name: built-package
+          path: test-build/*.tar.gz
+
+  test-package:
+    needs: build-package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          sparse-checkout: |
+            tests/smoke.sh
+          sparse-checkout-cone-mode: false
+
+      - name: Download built package
+        uses: actions/download-artifact@v4
+        with:
+          name: built-package
+          path: test-build
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.12
+
+      - name: Extract path to sdist
+        id: sdist_path
+        run: echo "sdist_path=$(ls test-build/*.tar.gz)" >> $GITHUB_OUTPUT
+
       - name: Install sdist
         uses: threeal/pipx-install-action@v1.0.0
         with:
-          packages: ${{ steps.sdist-path.outputs.path }}
+          packages: "${{ steps.sdist_path.outputs.sdist_path }}"
+
       - name: Run simple version command test
         run: kodit version
+
       - name: Run smoke test
         run: ./tests/smoke.sh
