--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -28,10 +28,27 @@ jobs:
     steps:
       - name: Wait for PyPI release to be available
         run: |
+          set -x
+
+          REPO_NAME=${{ github.event.repository.name }}
+          REPO_TAG=${{ github.event.release.tag_name }}
+          REPO_TAG=0.1.3
+
+          # Get the first letter of the repo name
+          REPO_NAME_FIRST_LETTER=${REPO_NAME:0:1}
+
+          # Initialize counter for 60 second timeout
+          count=0
           while true; do
-            if curl -s https://pypi.io/packages/source/k/${{ github.event.repository.name }}/${{ github.event.repository.name }}-${{ github.event.release.tag_name }}.tar.gz; then
-              break
-            fi
+              if curl -sfL https://pypi.io/packages/source/${REPO_NAME_FIRST_LETTER}/${REPO_NAME}/${REPO_NAME}-${REPO_TAG}.tar.gz > /dev/null; then
+                  break
+              fi
+              sleep 1
+              ((count++))
+              if [ $count -ge 60 ]; then
+                  echo "Timeout reached after 60 seconds"
+                  exit 1
+              fi
           done
       - uses: mislav/bump-homebrew-formula-action@v3
         with:
