--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,8 @@ dependencies = [
     "aiofiles>=24.1.0",
     "tdqm>=0.0.1",
     "uritools>=5.0.0",
+    "tree-sitter-language-pack>=0.7.3",
+    "tree-sitter>=0.24.0",
 ]
 
 [dependency-groups]
@@ -104,7 +106,7 @@ ignore = [
   "PGH004", # If I've disabled all, I mean disable all
 ]
 select = ["ALL"]
-exclude = []
+exclude = ["./tests/*"]
 
 [[tool.uv.index]]
 name = "pypi"
