--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "tree-sitter>=0.24.0",
     "fastmcp>=2.3.3",
     "pydantic-settings>=2.9.1",
+    "bm25s[core]>=0.2.12",
 ]
 
 [dependency-groups]
