chore(tests): fix package workflow (#43)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -100,5 +100,8 @@ jobs:
       - name: Run simple version command test
         run: kodit version
 
+      - name: Delete kodit data_dir
+        run: rm -rf ${HOME}/.kodit
+
       - name: Run smoke test
         run: ./tests/smoke.sh
