--- a/alembic.ini
+++ b/alembic.ini
@@ -3,7 +3,7 @@
 [alembic]
 # path to migration scripts
 # Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = src/kodit/alembic
+script_location = src/kodit/migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite+aiosqlite:///%(here)s/.kodit/kodit.db
+sqlalchemy.url = sqlite+aiosqlite:///%(here)s/.kodit.db
 
 
 [post_write_hooks]
