--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "bm25s[core]>=0.2.12",
     "gitpython>=3.1.44",
+    "sentence-transformers>=4.1.0",
+    "hf-xet>=1.1.2",
 ]
 
 [dependency-groups]
