--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "gitpython>=3.1.44",
     "sentence-transformers>=4.1.0",
     "hf-xet>=1.1.2",
+    "openai>=1.82.0",
+    "tiktoken>=0.9.0",
 ]
 
 [dependency-groups]
