chore(ci): use correct pypi url and make count posix compliant (#58)

--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -39,11 +39,11 @@ jobs:
           # Initialize counter for 60 second timeout
           count=0
           while true; do
-              if curl -sfL https://pypi.io/packages/source/${REPO_NAME_FIRST_LETTER}/${REPO_NAME}/${REPO_NAME}-${REPO_TAG}.tar.gz > /dev/null; then
+              if curl -sfL https://pypi.org/packages/source/${REPO_NAME_FIRST_LETTER}/${REPO_NAME}/${REPO_NAME}-${REPO_TAG}.tar.gz > /dev/null; then
                   break
               fi
               sleep 1
-              ((count++))
+              count=$((count+1))
               if [ $count -ge 60 ]; then
                   echo "Timeout reached after 60 seconds"
                   exit 1
@@ -55,7 +55,7 @@ jobs:
           formula-path: Formula/${{ github.event.repository.name }}.rb
           homebrew-tap: ${{ github.repository_owner }}/homebrew-${{ github.event.repository.name }}
           tag-name: "${{ github.event.release.tag_name }}"
-          download-url: "https://pypi.io/packages/source/k/${{ github.event.repository.name }}/${{ github.event.repository.name }}-${{ github.event.release.tag_name }}.tar.gz"
+          download-url: "https://pypi.org/packages/source/k/${{ github.event.repository.name }}/${{ github.event.repository.name }}-${{ github.event.release.tag_name }}.tar.gz"
           commit-message: |
             {{formulaName}} {{version}}
         env:
