--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "hf-xet>=1.1.2",
     "openai>=1.82.0",
     "tiktoken>=0.9.0",
+    "asyncpg>=0.30.0",
 ]
 
 [dependency-groups]
