chore(ci): remove pipx for faster tests (#71)
Replaced with equivalent uv tool install commands, which does the same thing

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,13 +58,13 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v5
 
-      - run: uv build --sdist --out-dir test-build
+      - run: uv build --wheel --out-dir test-build
 
       - name: Upload built package
         uses: actions/upload-artifact@v4
         with:
           name: built-package
-          path: test-build/*.tar.gz
+          path: test-build/*.whl
 
   test-package:
     needs: build-package
@@ -88,14 +88,16 @@ jobs:
         with:
           python-version: 3.12
 
-      - name: Extract path to sdist
-        id: sdist_path
-        run: echo "sdist_path=$(ls test-build/*.tar.gz)" >> $GITHUB_OUTPUT
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
-      - name: Install sdist
-        uses: threeal/pipx-install-action@v1.0.0
-        with:
-          packages: "${{ steps.sdist_path.outputs.sdist_path }}"
+      - name: Extract path to wheel
+        id: wheel_path
+        run: echo "wheel_path=$(ls test-build/*.whl)" >> $GITHUB_OUTPUT
+
+      # This is equivalent to `pipx install --include-deps, but faster
+      - name: Install wheel
+        run: uv tool install "${{ steps.wheel_path.outputs.wheel_path }}"
 
       - name: Run simple version command test
         run: kodit version
