--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,12 +62,18 @@ jobs:
   test-package:
     needs: build-package
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.12
+          - 3.13
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: |
             tests/smoke.sh
+            uv.lock
           sparse-checkout-cone-mode: false
 
       - name: Download built package
@@ -79,7 +85,7 @@ jobs:
       - name: "Set up Python"
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: ${{ matrix.python-version }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
