--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ dependencies = [
     "openai>=1.82.0",
     "tiktoken>=0.9.0",
     "asyncpg>=0.30.0",
+    "transformers>=4.51.3",
 ]
 
 [dependency-groups]
