--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dependencies = [
     "tiktoken>=0.9.0",
     "asyncpg>=0.30.0",
     "transformers>=4.51.3",
+    "accelerate>=1.7.0",
 ]
 
 [dependency-groups]
