fix(docker): add git dependency to container and test (#112)

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -26,6 +26,9 @@ jobs:
           load: true
           tags: ${{ env.TEST_TAG }}
 
+      - name: Docker smoke test
+        run: ./tests/docker-smoke.sh
+
   push_to_registry:
     name: Push Docker image to registry
     runs-on: ubuntu-latest
