--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,6 +13,9 @@ jobs:
     name: Test and build Docker image
     runs-on: ubuntu-latest
     steps:
+      - name: Free up disk space
+        run: sudo rm -rf /usr/local/lib/android /usr/share/dotnet || true
+
       - name: Check out the repo
         uses: actions/checkout@v4
 
@@ -43,8 +46,17 @@ jobs:
     # Only run on main branch or when explicitly triggered
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
+      - name: Free up disk space
+        run: sudo rm -rf /usr/local/lib/android /usr/share/dotnet || true
+
       - name: Check out the repo
         uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
@@ -63,6 +75,7 @@ jobs:
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
+          platforms: linux/amd64,linux/arm64
           context: .
           file: ./Dockerfile
           push: true
