--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "pydantic-settings>=2.9.1",
     "bm25s[core]>=0.2.12",
     "gitpython>=3.1.44",
+    "pathspec>=0.12.1",
     "sentence-transformers>=4.1.0",
     "hf-xet>=1.1.2",
     "openai>=1.82.0",
