chore(ci): build 3.12 versions of containers (#186)

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -45,6 +45,9 @@ jobs:
     needs: test-build
     # Only run on main branch or when explicitly triggered
     if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name == github.repository
+    strategy:
+      matrix:
+        python-version: ["3.12.8", "3.13.5"]
     steps:
       - name: Free up disk space
         run: sudo rm -rf /usr/local/lib/android /usr/share/dotnet || true
@@ -65,11 +68,28 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set short Python version
+        id: pyver
+        run: |
+          echo "SHORT_PY=$(echo '${{ matrix.python-version }}' | cut -d. -f1,2)" >> $GITHUB_OUTPUT
+          echo "ENABLE_DEFAULT=$([ \"$(echo '${{ matrix.python-version }}' | cut -d. -f1,2)\" = \"3.13\" ] && echo true || echo false)" >> $GITHUB_OUTPUT
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{ vars.REGISTRY }}/${{ vars.REGISTRY_ORG }}/${{ github.event.repository.name }}
+          tags: |
+            type=semver,pattern={{version}},enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
+            type=semver,pattern={{version}},suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
+            type=semver,pattern={{major}}.{{minor}},enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
+            type=semver,pattern={{major}}.{{minor}},suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
+            type=ref,event=branch,enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
+            type=ref,event=branch,suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
+            type=ref,event=pr,enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
+            type=ref,event=pr,suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
+            type=sha,enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
+            type=sha,suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
 
       - name: Build and push Docker image
         id: push
@@ -81,6 +101,8 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            PYTHON_VERSION=${{ matrix.python-version }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
