--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "transformers>=4.51.3",
     "accelerate>=1.7.0",
     "rudder-sdk-python>=2.1.4",
+    "pystemmer>=3.0.0",
 ]
 
 [dependency-groups]
@@ -64,6 +65,8 @@ dev = [
     "pytest-cov>=6.1.1",
     "ruff>=0.11.8",
     "snakeviz>=2.2.2",
+    "types-tqdm>=4.67.0.20250516",
+    "types-aiofiles>=24.1.0.20250708",
 ]
 
 [project.urls]
@@ -142,16 +145,3 @@ package = true
 
 [tool.mypy]
 plugins = ["sqlalchemy.ext.mypy.plugin"]
-warn_return_any = true
-warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_optional = true
-
