feat(API): add index management API (#205)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,14 +32,11 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Lint
-        run: uv run ruff check
-
-      - name: Run type checks
-        run: uv run mypy --config-file pyproject.toml .
+      - name: API Doc check
+        run: make openapi-check
 
       - name: Run tests
-        run: uv run pytest -s --cov=src --cov-report=xml tests/kodit
+        run: make test
 
   build-package:
     runs-on: ubuntu-latest
