--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ dev = [
     "snakeviz>=2.2.2",
     "types-tqdm>=4.67.0.20250516",
     "types-aiofiles>=24.1.0.20250708",
+    "openapi-markdown>=0.4.3",
 ]
 
 [project.urls]
@@ -129,6 +130,9 @@ ignore = [
   "EM102", # As above
 ]
 select = ["ALL"]
+
+[tool.ruff.lint.flake8-bugbear]
+extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
 
 [[tool.uv.index]]
 name = "pypi"
