chore(docs): improve API docs look and feel (#207)

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-tags: true
+          fetch-depth: 0
 
       # Use the official Python action to set up Python because it is faster
       - name: "Set up Python"
