--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -19,7 +19,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - name: Build and push Docker image
+      - name: Build test Docker image
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
@@ -90,6 +90,7 @@ jobs:
             type=ref,event=pr,suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
             type=sha,enable=${{ steps.pyver.outputs.ENABLE_DEFAULT }}
             type=sha,suffix=-py${{ steps.pyver.outputs.SHORT_PY }}
+            type=raw,value=latest,enable=${{ steps.pyver.outputs.ENABLE_DEFAULT && startsWith(github.ref, 'refs/tags/') }}
 
       - name: Build and push Docker image
         id: push
