--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,6 @@ dependencies = [
     "pathspec>=0.12.1",
     "sentence-transformers>=4.1.0",
     "hf-xet>=1.1.2",
-    "openai>=1.82.0",
     "tiktoken>=0.9.0",
     "asyncpg>=0.30.0",
     "transformers>=4.51.3",
@@ -55,6 +54,7 @@ dependencies = [
     "rudder-sdk-python>=2.1.4",
     "pystemmer>=3.0.0",
     "litellm>=1.75.8",
+    "openai==1.99.9",
 ]
 
 [dependency-groups]
