--- a/docs/reference/deployment/docker-compose.yaml
+++ b/docs/reference/deployment/docker-compose.yaml
@@ -19,16 +19,12 @@ services:
       DEFAULT_SEARCH_PROVIDER: vectorchord
 
       # External embedding provider
-      EMBEDDING_ENDPOINT_TYPE: openai
-      EMBEDDING_ENDPOINT_BASE_URL: https://api.openai.com/v1
       EMBEDDING_ENDPOINT_API_KEY: ${OPENAI_API_KEY:-}
-      EMBEDDING_ENDPOINT_MODEL: text-embedding-3-small
+      EMBEDDING_ENDPOINT_MODEL: openai/text-embedding-3-small
 
       # External enrichment provider
-      ENRICHMENT_ENDPOINT_TYPE: openai
-      ENRICHMENT_ENDPOINT_BASE_URL: https://api.openai.com/v1
       ENRICHMENT_ENDPOINT_API_KEY: ${OPENAI_API_KEY:-}
-      ENRICHMENT_ENDPOINT_MODEL: o3-mini
+      ENRICHMENT_ENDPOINT_MODEL: openai/gpt-5-nano
 
       # Auto-indexing configuration
       AUTO_INDEXING_SOURCES_0_URI: https://github.com/helixml/kodit
